# langGraph-invoice-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-05-invoice-rag.md
docs/superpowers/specs/: 2026-05-05-invoice-rag-design.md
scripts/: demo.py
src/invoice_agent/: config.py  db.py  graph.py  logging_setup.py  main.py  runner.py  scheduler.py  state.py
src/invoice_agent/nodes/: ask_project.py  email_accounts.py  generate_pdf.py  notify.py  parse_approval.py  parse_project.py  parse_summary.py  send_preview.py  send_summary.py
src/invoice_agent/qa/: __init__.py  agent.py  memory.py  prompts.py  tools.py  util.py
src/invoice_agent/tools/: llm.py  mailer.py  pdf.py  whatsapp.py
src/invoice_agent/webhook/: legal.py  query.py  server.py
templates/: YashInvoice.docx  invoice.html
tests/: conftest.py  test_db.py  test_graph_flow.py  test_parse_approval.py  test_parse_project.py  test_parse_query.py  test_parse_summary.py  test_pdf_render.py  test_qa_agent.py  test_qa_config.py  test_qa_memory.py  test_qa_prompts.py  test_qa_safety.py  test_qa_tools.py  test_qa_util.py  test_qa_webhook.py  test_webhook.py  test_webhook_query.py
