[project]
name = "invoice-agent"
version = "0.1.0"
description = "Local-first WhatsApp invoice automation agent built on LangGraph + Ollama"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Yash" }]

dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain-core>=0.3.20",
    "langchain-ollama>=0.2.0",
    # Web / webhook
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # Scheduling
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.30",
    "tzdata>=2024.1",
    # PDF + templating
    "weasyprint>=62.3",
    "jinja2>=3.1.4",
    # Config + logging
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
]

[project.scripts]
invoice-agent = "invoice_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --cov=src/invoice_agent --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
